compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__functions__function_formatting_typescript1.snap
---
source: compiler-core/src/javascript/tests/functions.rs
assertion_line: 96
expression: "\npub fn this_function_really_does_have_a_ludicrously_unfeasibly_long_name_for_a_function(x, y) {\nx + y\n}"
---
----- SOURCE CODE

pub fn this_function_really_does_have_a_ludicrously_unfeasibly_long_name_for_a_function(x, y) {
x + y
}

----- TYPESCRIPT DEFINITIONS
export function this_function_really_does_have_a_ludicrously_unfeasibly_long_name_for_a_function(
  x: number,
  y: number
): number;
