compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__functions__pipe_last.snap
---
source: compiler-core/src/javascript/tests/functions.rs
assertion_line: 134
expression: "fn id(x) { x }\npub fn main() {\n  1\n  |> id\n}\n"
---
----- SOURCE CODE
fn id(x) { x }
pub fn main() {
  1
  |> id
}


----- COMPILED JAVASCRIPT
function id(x) {
  return x;
}

export function main() {
  let _pipe = 1;
  return id(_pipe);
}
