compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__functions__pipe_shadow_import.snap
---
source: compiler-core/src/javascript/tests/functions.rs
assertion_line: 372
expression: "\n        import wibble.{println}\n        pub fn main() {\n          let println =\n            \"oh dear\"\n            |> println\n          println\n        }"
---
----- SOURCE CODE

        import wibble.{println}
        pub fn main() {
          let println =
            "oh dear"
            |> println
          println
        }

----- COMPILED JAVASCRIPT
import * as $wibble from "../wibble.mjs";
import { println } from "../wibble.mjs";

export function main() {
  let println$1 = (() => {
    let _pipe = "oh dear";
    return println(_pipe);
  })();
  return println$1;
}
